# networking-baremetal

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
devstack/lib/: networking-baremetal
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/admin/: ha-chassis-group-alignment.rst  index.rst  l2vni-trunk-reconciliation.rst  router-ha-binding.rst
doc/source/configuration/: config.rst  index.rst
doc/source/configuration/ironic-neutron-agent/: config.rst  index.rst  l2vni-trunk-reconciliation.rst  sample-config.rst
doc/source/configuration/ml2/: index.rst  l2vni-example.ini  l2vni-mechanism-driver.rst
doc/source/configuration/ml2/device_drivers/: common_config.rst  index.rst  netconf-openconfig.rst
doc/source/contributor/: index.rst  quickstart-multitenant.rst  quickstart-netconf-openconfig.rst  quickstart.rst  quicstart-multitenant.rst
doc/source/install/: index.rst
networking_baremetal/: __init__.py  _i18n.py  common.py  config.py  constants.py  exceptions.py  ironic_client.py  neutron_client.py
networking_baremetal/agent/: agent_config.py  ironic_neutron_agent.py  l2vni_trunk_manager.py  ovn_client.py  ovn_events.py  router_ha_binding.py
networking_baremetal/drivers/: base.py
networking_baremetal/drivers/netconf/: openconfig.py
networking_baremetal/openconfig/interfaces/: aggregate.py  ethernet.py  interfaces.py  types.py
networking_baremetal/openconfig/lacp/: lacp.py  types.py
networking_baremetal/openconfig/network_instance/: network_instance.py
networking_baremetal/openconfig/vlan/: types.py  vlan.py
networking_baremetal/plugins/ml2/: baremetal_l2vni_mapping.py  baremetal_mech.py
networking_baremetal/tests/: __init__.py  test_networking_baremetal.py
networking_baremetal/tests/unit/agent/: test_agent_config.py  test_ironic_neutron_agent.py  test_l2vni_trunk_manager.py  test_ovn_client.py  test_ovn_events.py  test_router_ha_binding.py
networking_baremetal/tests/unit/drivers/netconf/: test_openconfig.py
networking_baremetal/tests/unit/ironic_agent/: test_hashring_member_manager.py  test_ironic_agent.py
networking_baremetal/tests/unit/openconfig/: test_interfaces.py  test_lacp.py  test_network_instance.py  test_vlan.py
networking_baremetal/tests/unit/plugins/ml2/: test_baremetal_l2vni_mech.py  test_baremetal_mech.py  utils.py
playbooks/legacy/networking-baremetal-dsvm-multitenant-vlans/: run.yaml
releasenotes/notes/: add-initial-note-8f08fd95b0149b2c.yaml  add-l2vni-mechanism-driver-a7f9e2c4b8d3a1f5.yaml  add-segment-id-to-subport-binding-profile-e70ed6b17c88760a.yaml  agent-notification-auto-delete-queues-a3782fbeea2b57b1.yaml  auto-detect-l2vni-overlay-support-93785319735a4cc8.yaml  cleanup-orphan-agents-236721a7sh844315.yaml  conductor-groups-filtering-support.yaml  device-manager-driver-interface-741703fbfc063780.yaml  distributed-agent-hashring-6b623a7a9caf0425.yaml  drop-py-2-7-2249129e616bb1e5.yaml  fix-conflict-with-ngs-41a862c292718c3b.yaml  fix-exception-handling-openstacksdk-d3eff6f9fe9ea42f.yaml  fix-ha-chassis-group-list-access-bug2145014-8976351990f2bbb0.yaml  fix-ha-reconcile-missing-ports-3d7e4c81bfd466b9.yaml  fix-hash-ring-after-eventlet-removal-b3e1967d57bea523.yaml  fix-is-partial-segment-call-bug2144505-63609991e8aff0c6.yaml  fix-l2vni-multi-link-lag-support-bug2144476-488d19606296d61e.yaml  fix-l2vni-trunk-port-binding-ef14191976236305.yaml  fix-l2vni-trunk-subport-vni-mapping-2cb690055917a6da.yaml  fix-member-manager-notification-queue-not-consumed-449738d4fd799634.yaml  fix-orphaned-localnet-ports-943b2ea6ebe40f2a.yaml  fix-ovn-idl-api-bug-2143988-8f3d9a2c1e5b7d4a.yaml  fix-router-interface-ha-binding-6629cb075748eed4.yaml  fix-snat-gateway-chassis-a8f91c2d4e7b3fa1.yaml  fix_autodelete_for_quorum_queues-e001f2d8d8ae780b.yaml  force-exit-on-comm-failure-d0a584af6a3bb373.yaml  ha-chassis-group-alignment-8f2d1e5c9a4b6e3d.yaml  ironic-neutron-agent-291f8aad7d53f06c.yaml  l2vni-targeted-single-vlan-reconciliation-14d87599a0055136.yaml  l2vni-trunk-reconciliation-4dced39222f4657e.yaml  mech-agent-driver-ffc361e528668f8e.yaml  netconf-openconfig-device-driver-8fc15c9c2dc4bf17.yaml  netconf-openconfig-device-driver-lacp-support-ed9e1bc0eb784c9b.yaml  netconf-openconfig-device-driver-pre-configured-link-aggregates-2dcba8f96500d159.yaml  no-explicit-eventlet-use-19a2287e1f15ab71.yaml  openconfig-library-5ecd1f158666c6c5.yaml  ovn-event-driven-reconciliation-a62685c58a778927.yaml  pre-commit-a3de910e07fde16e.yaml  remove-localnet-requested-chassis-122cdaa8244cfc79.yaml  remove-subport-binding-host-id-bug2148720-aa4c59bafb997540.yaml  (+4 more)
releasenotes/source/: conf.py  index.rst  train.rst
tools/config/: networking-baremetal-common-device-driver-opts.conf  networking-baremetal-config-generator.conf  networking-baremetal-netconf-openconfig-driver-opts.conf
zuul.d/: legacy-networking-baremetal-jobs.yaml  networking-baremetal-jobs.yaml  project.yaml
