[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "networking-baremetal"
description = "Neutron plugin that provides deep Ironic/Neutron integration."
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://docs.openstack.org/networking-baremetal/latest/"

[project.entry-points."oslo.config.opts"]
ironic-neutron-agent = "networking_baremetal.agent.ironic_neutron_agent:list_opts"
ironic-client = "networking_baremetal.ironic_client:list_opts"
baremetal = "networking_baremetal.config:list_opts"
common-device-driver-opts = "networking_baremetal.config:list_common_device_driver_opts"
netconf-openconfig-driver-opts = "networking_baremetal.drivers.netconf.openconfig:list_driver_opts"

[project.scripts]
ironic-neutron-agent = "networking_baremetal.agent.ironic_neutron_agent:main"

[project.entry-points."neutron.ml2.mechanism_drivers"]
baremetal = "networking_baremetal.plugins.ml2.baremetal_mech:BaremetalMechanismDriver"

[project.entry-points."networking_baremetal.drivers"]
netconf-openconfig = "networking_baremetal.drivers.netconf.openconfig:NetconfOpenConfigDriver"

[tool.setuptools]
packages = [
    "networking_baremetal"
]

[tool.codespell]
quiet-level = 4
# Words to ignore:
# assertIn: Python's unittest method
ignore-words-list = "assertIn"
skip = "releasenotes/notes/force-exit-on-comm-failure-d0a584af6a3bb373.yaml"

[tool.doc8]
ignore = ["D001"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",        # pycodestyle (error)
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "LOG",      # flake8-logging
    "S",        # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"networking_baremetal/agent/ironic_neutron_agent.py" = [
    "E402",   # we need to monkey patch before import
]

"networking_baremetal/drivers/netconf/openconfig.py" = [
    "S311",   # we don't need a secure random choice here
    "S314",   # keep using xml since that's been in use
]

"networking_baremetal/tests/unit/drivers/netconf/test_openconfig.py" = [
    "S101",   # test uses assert
]
