[metadata]
name = networking-baremetal
summary = Neutron plugin that provides deep Ironic/Neutron integration.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/networking-baremetal/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    networking_baremetal

[entry_points]
oslo.config.opts =
    ironic-neutron-agent = networking_baremetal.agent.ironic_neutron_agent:list_opts
    ironic-client = networking_baremetal.ironic_client:list_opts

console_scripts =
    ironic-neutron-agent = networking_baremetal.agent.ironic_neutron_agent:main

neutron.ml2.mechanism_drivers =
    baremetal = networking_baremetal.plugins.ml2.baremetal_mech:BaremetalMechanismDriver

[pbr]
autodoc_index_modules = True
api_doc_dir = contributor/api

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_baremetal/locale
domain = networking_baremetal

[update_catalog]
domain = networking_baremetal
output_dir = networking_baremetal/locale
input_file = networking_baremetal/locale/networking_baremetal.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_baremetal/locale/networking_baremetal.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
