[metadata]
name = networking-baremetal
summary = Neutron plugin that provides deep Ironic/Neutron integration.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/networking-baremetal/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    networking_baremetal

[entry_points]
oslo.config.opts =
    ironic-neutron-agent = networking_baremetal.agent.ironic_neutron_agent:list_opts
    ironic-client = networking_baremetal.ironic_client:list_opts

console_scripts =
    ironic-neutron-agent = networking_baremetal.agent.ironic_neutron_agent:main

neutron.ml2.mechanism_drivers =
    baremetal = networking_baremetal.plugins.ml2.baremetal_mech:BaremetalMechanismDriver

[pbr]
autodoc_index_modules = True
api_doc_dir = contributor/api

[compile_catalog]
directory = networking_baremetal/locale
domain = networking_baremetal

[update_catalog]
domain = networking_baremetal
output_dir = networking_baremetal/locale
input_file = networking_baremetal/locale/networking_baremetal.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_baremetal/locale/networking_baremetal.pot
